--- a/Project.toml
+++ b/Project.toml
@@ -1,26 +1,11 @@
 name = "Sequences"
 uuid = "b4b868b0-69a7-11e9-2db0-173b4e8e576c"
-authors = ["OLMS <seq@olms.onl>"]
 version = "0.1.0"
 
 [deps]
-AbstractAlgebra = "c3fe647b-3220-5bb0-a1ea-a7954cac585d"
-Atom = "c52e3926-4ff0-5f6e-af25-54175e0327b1"
-BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
-Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
-Gumbo = "708ec375-b3d6-5a57-a7ce-8257bf98657a"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
-IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
-InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
-Juno = "e5e0dc1b-0480-54bc-9374-aad01c23163d"
-MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
-Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
-Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
-StringBuilders = "db12335b-fddc-5e1b-b0ee-42071d21ae50"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
