--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,10 @@ name = "IntegerSequences"
 uuid = "b4b868b0-69a7-11e9-2db0-173b4e8e576c"
 version = "0.1.0"
 
+[compat]
+julia = ">= 1.1.0"
+Nemo = ">= 0.13.4"
+
 [deps]
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
