--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ language: julia
 os:
   - linux
   - osx
+  - windows
 
 julia:
   - 1.1.1
+  - 1.2
   - nightly
 
 matrix:
@@ -26,7 +28,7 @@ script:
 jobs:
   include:
     - stage: "Documentation"
-      julia: 1.1
+      julia: 1.3
       os: linux
       script:
         - julia --project=docs/ -e 'import Pkg; Pkg.add("Documenter")'
