--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,12 @@ os:
   - windows
 
 julia:
-  - 1.1
   - 1.2
   - 1.3
-  - nightly
 
 matrix:
   allow_failures:
-    - julia: nightly
+    - julia: 1.3
 
 notifications:
   email: true
