--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,8 @@ uuid = "b4b868b0-69a7-11e9-2db0-173b4e8e576c"
 version = "0.2.0"
 
 [deps]
+AbstractAlgebra = "c3fe647b-3220-5bb0-a1ea-a7954cac585d"
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
@@ -14,5 +16,6 @@ Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-julia = ">= 1.1.0"
-Nemo = ">= 0.13.4"
+AbstractAlgebra = ">= 0.5.3"
+Nemo = ">= 0.14.3"
+julia = ">= 1.2.0"
