--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,5 @@ jobs:
         - julia --project=docs/ -e 'import Pkg; Pkg.add("Documenter")'
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
-      after_success: skip
+      after_success:
+        - julia -e 'cd(Pkg.dir("IntegerSequences.jl")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
