--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ os:
   - windows
 
 julia:
-  - 1.2
   - 1.3
+  - nightly
 
 matrix:
   allow_failures:
-    - julia: 1.3
+    - julia: nightly
 
 notifications:
   email: true
