--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "IntegerSequences"
 uuid = "b4b868b0-69a7-11e9-2db0-173b4e8e576c"
-version = "0.2.0"
+version = "0.3.0-dev"
 
 [deps]
 Atom = "c52e3926-4ff0-5f6e-af25-54175e0327b1"
