--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 Manifest.toml
 local/*
 docs/build/*
-.vscode/*
-integersequences.code-workspace
+.vsc/*
 data/A123456.json
 data/b000290.txt
+demos/.ipynb_checkpoints
+
