--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ env:
     - DOCUMENTER_DEBUG=true
 
 script:
-  - julia --color=yes -e 'using Pkg; Pkg.build()'
-  - julia --check-bounds=yes --color=yes -e 'using Pkg; Pkg.test(coverage=true)'
+  - julia -e 'using Pkg; Pkg.build()'
 
 jobs:
   include:
@@ -30,8 +29,6 @@ jobs:
       julia: 1.3
       os: linux
       script:
-        - julia --project=docs/ -e 'import Pkg; Pkg.add("Documenter")'
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
-      after_success:
-        - julia -e 'cd(Pkg.dir("IntegerSequences.jl")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+      after_success: skip
