--- a/Project.toml
+++ b/Project.toml
@@ -14,10 +14,10 @@ Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-DataStructures = 0.17.9
-DocStringExtensions = 0.8.1
-Documenter = 0.24.4
-HTTP = 0.8.8
-IterTools = 1.3.0
-julia = 1.3.1
-Nemo = 0.16.2
+DataStructures = "0.17.9"
+DocStringExtensions = "0.8.1"
+Documenter = "0.24.4"
+HTTP = "0.8.8"
+IterTools = "1.3.0"
+julia = "1.3.1"
+Nemo = "0.16.2"
